--- a/interim-report/Bib/References.bib
+++ b/interim-report/Bib/References.bib
@@ -509,3 +509,11 @@
   year={2017},
   publisher={Springer}
 }
+
+@misc{datasheet_spherical,
+  title={RS PRO Steel M10 Ball and
+Socket Joint, 47mm x 47.5mm},
+  author={RS Components Africa},
+  year={2020},
+  publisher={Datasheet}
+}
