--- a/interim-report/Files/Chapter3.tex
+++ b/interim-report/Files/Chapter3.tex
@@ -329,6 +329,26 @@ If solid rods are used, strain gauges of high sensitivity should be used.
 	\end{figure}
 \end{center}
 
+\section{Test Flange and Strut}
+The test flange will be used to hold the strut during wind tunnel testing. For optimum results, the reference axis is taken to be in the middle of the middle platform \cite {fernandes_design_nodate}. The flange will be fastened to the moving platform by use of bolts and nuts. Fasteners are more economical and easy to achieve as compared to welding. M6 or M8 nuts cab be used for this purpose.
+
+The test flange should hold the strut for a considerable length in order to keep the rotation of the strut below certain predefined values and thus limiting torsion and bending behaviour of the strut during Wind Tunnel testing.
+\begin{center}
+	\begin{figure}[!h]
+	\centering
+	\includegraphics[width=0.75\linewidth]{Figures/Test}
+	\caption[Test flange]{Test flange design}
+	\end{figure}
+\end{center}
+The strut will go into the test section of the Wind tunnel at the Fluids lab in JKUAT. The strut should be long enough to position the model under testing in the middle of the test section. The strut will also be subjected to the flow forces in the wind tunnel. It should therefore be made of as small diameter as possible. A diameter 12.5mm of and a length of 400mm were considered, based on the Wind Tunnel set-up (Appendix).
+\begin{center}
+	\begin{figure}[!h]
+	\centering
+	\includegraphics[width=0.75\linewidth]{Figures/Strut}
+	\caption[Strut]{Strut}
+	\end{figure}
+\end{center}
+
 \section{Spherical Joints}
 For the 6-6 type, both platforms have six vertices and
 the connections between the sensing bars and the platforms is made by simple spherical joints. Single spherical joints are chosen because they are easy to manufacture and they eliminate the issues of interference between sensing bars when double spherical joints are used \cite{fernandes_design_nodate}. 
