--- a/interim-report/Bib/References.bib
+++ b/interim-report/Bib/References.bib
@@ -517,3 +517,5 @@ Socket Joint, 47mm x 47.5mm},
   year={2020},
   publisher={Datasheet}
 }
+
+Waichal, Prasanna. (2016). Re: How can I decide motor parameters in stewart platform with rotary actuator?. Retrieved from: https://www.researchgate.net/post/How_can_I_decide_motor_parameters_in_stewart_platform_with_rotary_actuator/56902fd05f7f71f70d8b4576/citation/download. 
