--- a/interim-report/Main_file.tex
+++ b/interim-report/Main_file.tex
@@ -157,7 +157,7 @@
   \clearpage
     \input{Files/Chapter4}
 %  \clearpage
-%  \input{Files/Summary}
+ %\input{Files/Summary}
   \clearpage
 %----  Bibliography  ----------------------------------------
 \markright{References}                               % Erzeugt Kopfzeile
@@ -167,4 +167,7 @@
 \nocite{Lun01} 
 
                                      % Falls etwas in die Literaturliste soll, was nicht Referenziert wird
+\appendix
+\input{Files/Appendices}
+
 \end{document}
