--- a/interim-report/Files/Chapter4.tex
+++ b/interim-report/Files/Chapter4.tex
@@ -1,10 +1,15 @@
-\section{Expected Outcomes}
-\begin{enumerate}
-\item A functional Stewart platform with six degrees of freedom that positions a model within a wind tunnel.
-\item A functional force sensor for measuring the aerodynamic loads applied on a model and for calculating aerodynamic coefficients from the measurements taken.
-\item An improved velocity measurement system for the wind tunnel using pitot tubes.
-\item A human Machine Interface with access to control  of the Stewart platform electronics and data acquisition from sensors.
-\end{enumerate}
+\chapter{Results}
+\section{Six DOF Stewart Platform}
+For the dimensions already discussed, a Stewart Platform with 6 degrees of freedom was designed and assembled as shown below:
+\begin{center}
+	\begin{figure}[!h]
+	\centering
+	\includegraphics[width=0.8\linewidth]{Figures/Assembly}
+	\caption[Assembled Platform]{Assemly of Stewart Platform}
+	\end{figure}
+\end{center}
+
+
 \newpage
 \section{Proposed Budget}
 \begin{center}
