--- a/interim-report/Main_file.tex
+++ b/interim-report/Main_file.tex
@@ -157,6 +157,8 @@
     \input{Files/Chapter3}
   \clearpage
     \input{Files/Chapter4}
+  \clearpage
+    \input{Files/Chapter5}
 %  \clearpage
  %\input{Files/Summary}
   \clearpage
@@ -171,7 +173,26 @@
 \newpage
 \appendix
 \pagenumbering{roman}
-\chapter{Stewart Platform and Wind Tunnel Configuration}
+\chapter{Stewart Platform and Wind Tunnel Configurations}
 \includepdf[pages=-]{Wind Tunnel Assembly + Stewart}
 \includepdf[pages=-]{Assemby 3 2}
+\chapter{Budget and Timeplan}
+\section{Provisional Budget}
+\begin{center}
+\begin{table}[!h]
+\centering
+\caption{Proposed budget}
+\paragraph{ }
+\includegraphics{Figures/budget}
+\end{table}
+\end{center}
+\section{Work Plan}
+\begin{center}
+\begin{table}[!h]
+\centering
+\caption[Timeplan]{Timeplan for first and second semester}
+\paragraph{ }
+\includegraphics[width=0.95\linewidth]{Figures/workplan}
+\end{table}
+\end{center}
 \end{document}
