--- a/interim-report/Files/Chapter4.tex
+++ b/interim-report/Files/Chapter4.tex
@@ -65,3 +65,22 @@ Von Mise's stress does not exceed the Yield Stress of Aluminum (275 MPa) hence t
 
 Application of loads on the platform translates to induced strain in the Stewart platform legs. This will provide an input for the strain gauges used for force measurements.
 
+\section{Human Machine Interface}
+The user interface of the platform was programmed usig golang and this resulted in the view below with the use of sliders for platform positionning and buttons to set model orientationa and start data collection.
+\begin{center}
+	\begin{figure}[!h]
+	\centering
+	\includegraphics[width=0.7\linewidth]{Figures/hmi}
+	\caption[HMI Dashboard]{HMI Dashboard}
+	\end{figure}
+\end{center}
+
+\section{PCB}
+The schematics from the electrical designs as seen in the aooendix were routed to generate a PCB ready for maufucture. This is shown in the 3D rennder below:
+\begin{center}
+	\begin{figure}[!h]
+	\centering
+	\includegraphics[width=0.7\linewidth]{Figures/pcb}
+	\caption[HMI Dashboard]{HMI Dashboard}
+	\end{figure}
+\end{center}
