--- a/interim-report/Files/Abstract.tex
+++ b/interim-report/Files/Abstract.tex
@@ -1,18 +1,18 @@
+% !TeX spellcheck = <none>
 \addcontentsline{toc}{section}{Abstract}
 
 \section*{Abstract}
 \label{sec:Abstract}
-Obtaining and simulating the aerodynamic performance of items in a wind tunnel is a
-significant and important part in the development of vehicles, aircraft and other machines
-that require aerodynamic performance evaluation. Due to the complex maneuvers that may require simulation, there is a need for dynamic positioning of the model of the object in the wind tunnel. As a result, the proposal for a Stewart platform to replicate these complex maneuvers during wind tunnel tests as well as to position the model to obtain the required data.
+Aerodynamic analysis of the performance of models within a wind tunnel is an important step in the design of vehicles and aircarft. It is important to measure the aerodynamic performance in metrics such as drag and lift in comparison to simulations during design.
+Due to the complex maneuvers that may require simulation, there is a need for dynamic positioning of the model of the object in the wind tunnel. As a result, the proposal for a Stewart platform to replicate these complex maneuvers during wind tunnel tests as well as to position the model to obtain the required data.
 
 This project will look into the modeling, simulation and development of a Stewart
 platform based force balance for a low speed wind tunnel. The project will utilize
 MATLAB/Simulink for modeling and simulation as well as Autodesk Inventor for the mechanical
-design. A robust control system will also be developed for the Stewart platform.
+design, Easy EDA is also utlized to design the electrical circuits. Six degree of freedom orientation of the platform also demonstrated. 
 Finally, models will be developed and tested in a wind tunnel to evaluate the performance
 of the platform. The force balance and platform should be able to position the test
-item and measure forces as well as calculate the aerodynamic coefficients using a bespoke computer program.
+item and measure aerodynamic loads and air velocity as well as log the data using a bespoke computer program for further analysis.
 
 
 
