--- a/interim-report/Main_file.tex
+++ b/interim-report/Main_file.tex
@@ -171,28 +171,6 @@
 
                                      % Falls etwas in die Literaturliste soll, was nicht Referenziert wird
 \newpage
-\appendix
-\pagenumbering{roman}
-\chapter{Stewart Platform and Wind Tunnel Configurations}
-\includepdf[pages=-]{Wind Tunnel Assembly + Stewart}
-\includepdf[pages=-]{Assemby 3 2}
-\chapter{Budget and Timeplan}
-\section{Provisional Budget}
-\begin{center}
-\begin{table}[!h]
-\centering
-\caption{Proposed budget}
-\paragraph{ }
-\includegraphics{Figures/budget}
-\end{table}
-\end{center}
-\section{Work Plan}
-\begin{center}
-\begin{table}[!h]
-\centering
-\caption[Timeplan]{Timeplan for first and second semester}
-\paragraph{ }
-\includegraphics[width=0.95\linewidth]{Figures/workplan}
-\end{table}
-\end{center}
+\clearpage
+\input{Files/Appendices}
 \end{document}
